--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,7 @@ body{background: #EEEEEE;}
     align-items: center;
     flex-direction: column;
     padding: 20px 0;
+    position: relative;
 }
 .siteList .site > .logo{
     height: 64px;
@@ -75,6 +76,11 @@ body{background: #EEEEEE;}
 .siteList .site > .link{
     font-size: 16px;
     margin-top: 4px;
+}
+.siteList .site > .delete{
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 .siteList .addButton{
     width: 150px;
