'增加删除功能，优化PC页面'

--- a/src/style.css
+++ b/src/style.css
@@ -13,9 +13,22 @@ body{background: #EEEEEE;}
 .globalHeader{
     margin: 27px 27px 20px;
 }
+@media (min-width: 500px) {
+    .globalHeader{
+        margin: 100px 0;
+    }
+
+}
 .searchForm{
     display: flex;
     justify-content: space-between;
+}
+@media (min-width: 500px) {
+    .searchForm{
+        max-width: 400px;
+        margin-left:auto;
+        margin-right: auto;
+    }
 }
 .searchForm > input{
     width: 100%;
@@ -39,16 +52,27 @@ body{background: #EEEEEE;}
     font-size: 16px;
 }
 
-.globalMain{  }
+.globalMain{
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .siteList{
+    margin: 27px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 27px;
+
+}
+@media (min-width: 500px) {
+    .siteList{
+        margin-left: 0;
+        margin-right: -20px;
+    }
 }
 .siteList > li{
     margin-bottom: 20px;
+    margin-right: 20px;
 }
 .siteList .site{
     border: 1px solid #DDDDDD;
