--- a/src/style.css
+++ b/src/style.css
@@ -62,17 +62,22 @@ body{background: #EEEEEE;}
     margin: 27px;
     display: flex;
     flex-wrap: wrap;
-
+    justify-content: space-between;
 }
 @media (min-width: 500px) {
     .siteList{
         margin-left: 0;
         margin-right: -20px;
+        justify-content: flex-start;
     }
 }
 .siteList > li{
     margin-bottom: 20px;
-    margin-right: 20px;
+}
+@media (min-width: 500px) {
+    .siteList > li{
+        margin-right: 20px;
+    }
 }
 .siteList .site{
     border: 1px solid #DDDDDD;
@@ -85,6 +90,7 @@ body{background: #EEEEEE;}
     flex-direction: column;
     padding: 20px 0;
     position: relative;
+    cursor: pointer;
 }
 .siteList .site > .logo{
     height: 64px;
@@ -105,6 +111,11 @@ body{background: #EEEEEE;}
     position: absolute;
     top: 10px;
     right: 10px;
+    display: none;
+    cursor: default;
+}
+.siteList .site:hover > .delete{
+    display: block;
 }
 .siteList .addButton{
     width: 150px;
