--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,29 @@ ul,ol{list-style: none;}
 a{color: inherit; text-decoration: none;}
 img{max-width: 100%;max-height: 100%;}
 
+/*background style*/
+#cover {
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(to right top, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+  }
+
+#set {
+    background-color: rgba(220,220,235,0.5);
+    padding: 1rem;
+    cursor: pointer;
+    border-radius: 7px;
+    transition: all ease-in-out 0.5s;
+    margin-top: 2rem;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+}
+#set:hover {
+    background-color: rgba(220,220,235,0.7);
+    transition: all ease 0.3s;
+}
+
 /*style*/
 body{background: #EEEEEE;}
 
@@ -91,7 +114,22 @@ body{background: #EEEEEE;}
     padding: 20px 0;
     position: relative;
     cursor: pointer;
+    box-shadow: 10px 10px 14px 1px rgb(0 0 0 / 20%);
+    transition: all 0.5s;
+    transition-property: all;
+    transition-duration: 0.5s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
 }
+.siteList .site:hover{
+    box-shadow: none;
+    transition: all 0.5s;
+    transition-property: all;
+    transition-duration: 0.5s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+}
+
 .siteList .site > .logo{
     height: 64px;
     width: 64px;
@@ -127,6 +165,20 @@ body{background: #EEEEEE;}
     align-items: center;
     flex-direction: column;
     padding: 20px 0;
+    box-shadow: 10px 10px 14px 1px rgb(0 0 0 / 20%);
+    transition: all 0.5s;
+    transition-property: all;
+    transition-duration: 0.5s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
+}
+.siteList .addButton:hover{
+    box-shadow: none;
+    transition: all 0.5s;
+    transition-property: all;
+    transition-duration: 0.5s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
 }
 .siteList .addButton .icon{
     width: 64px;
