--- a/src/style.css
+++ b/src/style.css
@@ -14,19 +14,18 @@ img{max-width: 100%;max-height: 100%;}
     background-image: linear-gradient(to right top, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
   }
 
-#set {
+#reset {
     background-color: rgba(220,220,235,0.5);
-    padding: 1rem;
+    padding: 10px;
     cursor: pointer;
-    border-radius: 7px;
+    border-radius: 4px;
     transition: all ease-in-out 0.5s;
-    margin-top: 2rem;
     position: fixed;
-    right: 0;
-    bottom: 0;
+    right: 10px;
+    bottom: 10px;
 }
-#set:hover {
-    background-color: rgba(220,220,235,0.7);
+#reset:hover {
+    background-color: #f5f5f7;
     transition: all ease 0.3s;
 }
 
@@ -57,22 +56,25 @@ body{background: #EEEEEE;}
     width: 100%;
     height: 40px;
     padding: 0 10px;
-    background: #FFFFFF;
+    background: #f5f5f7;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
+    outline:none;
 }
 .searchForm > button{
     white-space: nowrap;
     margin-left: 10px;
     height: 40px;
     border-radius: 4px;
-    background: #347CEA;
-    color: #FFFFFF;
+    background: #0071e3;
+    color: #f5f5f7;
     padding: 0 18px;
+    font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
+    font-size: 17px;
+    
 }
 
 .globalMain{
@@ -86,6 +88,7 @@ body{background: #EEEEEE;}
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 @media (min-width: 500px) {
     .siteList{
@@ -107,7 +110,7 @@ body{background: #EEEEEE;}
     border-radius: 4px;
     width: 150px;
     display: flex;
-    background: #FFFFFF;
+    background: #f5f5f7;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -123,7 +126,6 @@ body{background: #EEEEEE;}
 }
 .siteList .site:hover{
     box-shadow: none;
-    transition: all 0.5s;
     transition-property: all;
     transition-duration: 0.5s;
     transition-timing-function: ease;
@@ -149,22 +151,27 @@ body{background: #EEEEEE;}
     position: absolute;
     top: 10px;
     right: 10px;
-    display: none;
+    display: block;
+    opacity: 0;
     cursor: default;
 }
+
 .siteList .site:hover > .delete{
-    display: block;
+    transition: 5s all;
+    opacity: 0.7;
+    
 }
 .siteList .addButton{
     width: 150px;
     border: 1px solid #DDDDDD;
-    background: #FFFFFF;
+    background: #f5f5f7;
     border-radius: 4px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     padding: 20px 0;
+    cursor: pointer;
     box-shadow: 10px 10px 14px 1px rgb(0 0 0 / 20%);
     transition: all 0.5s;
     transition-property: all;
@@ -174,7 +181,6 @@ body{background: #EEEEEE;}
 }
 .siteList .addButton:hover{
     box-shadow: none;
-    transition: all 0.5s;
     transition-property: all;
     transition-duration: 0.5s;
     transition-timing-function: ease;
