--- a/src/style.css
+++ b/src/style.css
@@ -157,10 +157,16 @@ body{background: #EEEEEE;}
 }
 
 .siteList .site:hover > .delete{
-    transition: 5s all;
-    opacity: 0.7;
+    animation: deleteshow 4s 1;
     
 }
+@keyframes deleteshow {
+    0% { opacity: 0; }
+    10% { opacity: 0; }
+    55% { opacity: 0.7; }
+    100% { opacity: 0.7; }
+} 
+
 .siteList .addButton{
     width: 150px;
     border: 1px solid #DDDDDD;
